# ccm-daemon

./: .gitignore  Cargo.toml  README.md
ontology/: classes.ttl  properties.ttl
src/endpoint/: main.rs
src/write_api/: main.rs
