[package]
name = "ccm-daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "endpoint"
path = "src/endpoint/main.rs"

[[bin]]
name = "write_api"
path = "src/write_api/main.rs"

[dependencies]
gio = "0.20"
serde = "1.0"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracker-rs = { git = "https://gitlab.gnome.org/World/Rust/tracker-rs" }
zbus = "5.7"

[patch.'https://gitlab.gnome.org/World/Rust/tracker-rs']
tracker-rs = { path = "../tracker-rs" }
