[package]
name = "ccm-daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "endpoint"
path = "src/endpoint/main.rs"

[[bin]]
name = "write_api"
path = "src/write_api/main.rs"

[dependencies]
gio = "0.20.12"
serde = "1.0"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracker-rs = { version = "0.6.1", features = ["v3_5"] }
zbus = "5.7"
